# dm816x-gstreamer

./: README
gstreamer_ti/: .gitignore  Makefile  Makefile.common  README.TXT  RELEASE_NOTES.TXT
gstreamer_ti/gstreamer_demo/: demux_AVI.sh  demux_TS.sh  loadmodules_dm355.sh  loadmodules_dm6446.sh  loadmodules_dm6467.sh  loadmodules_omap3530.sh  play_AVI.sh  play_TS.sh  play_dm355_AVI.sh  play_dm355_mp3.sh  play_dm6467_AVI.sh  play_omap3_AVI.sh  play_omap3_TS.sh  test_AUDDEC.sh  test_AV.sh  test_IMGENC1.sh  test_VIDDEC.sh  test_VIDDEC2.sh
gstreamer_ti/gstreamer_demo/dm355/: decode_ts.sh  encode_image.sh  loadmodules.sh  target_gst.sh  test_sink.sh
gstreamer_ti/gstreamer_demo/dm357/: decode_image.sh  loadmodules.sh  target_gst.sh
gstreamer_ti/gstreamer_demo/dm365/: decode_qt.sh  loadmodules.sh  target_gst.sh
gstreamer_ti/gstreamer_demo/dm368/: loadmodules.sh
gstreamer_ti/gstreamer_demo/dm3730/: loadmodule.sh
gstreamer_ti/gstreamer_demo/dm6446/: loadmodules.sh  target_gst.sh
gstreamer_ti/gstreamer_demo/dm6467/: decode_avi.sh  decode_elementary.sh  encode_elementry.sh  loadmodules.sh  loopback_test.sh  target_gst.sh
gstreamer_ti/gstreamer_demo/dm6467t/: loadmodules.sh
gstreamer_ti/gstreamer_demo/dm816x/: example_pipeline.sh  multi-channel.sh
gstreamer_ti/gstreamer_demo/omap3530/: decode_avi.sh  decode_elementary.sh  decode_qt.sh  decode_ts.sh  loadmodules.sh  target_gst.sh  test_sink.sh
gstreamer_ti/gstreamer_demo/omap3530_dv400/: loadmodules.sh
gstreamer_ti/gstreamer_demo/shared/: EXAMPLE_PIPELINES.TXT  decode_avi.sh  decode_elementary.sh  decode_image.sh  decode_qt.sh  decode_ts.sh  encode_elementry.sh  encode_image.sh  loopback_test.sh  process_avopts.sh  process_elemencopts.sh  process_elemopts.sh  process_imgopts.sh  process_loopback.sh  run_pipe.sh  target_env.sh  test_sink.sh
gstreamer_ti/opensource_build/: Makefile  Packages.make  Packages.make.dm816x
gstreamer_ti/opensource_build/distfiles/: check-0.9.8.tar.gz.sha256sum  glib-2.24.2.tar.gz.sha256sum  gst-ffmpeg-0.10.11.tar.gz.sha256sum  gst-plugin-h264-L24.13.tar.gz.sha256sum  gst-plugins-bad-0.10.20.tar.gz.sha256sum  gst-plugins-base-0.10.30.tar.gz.sha256sum  gst-plugins-good-0.10.25.tar.gz.sha256sum  gst-plugins-ugly-0.10.16.tar.gz.sha256sum  gstreamer-0.10.30.tar.gz.sha256sum  lame-398-2.tar.gz.sha256sum  libid3tag-0.15.1b.tar.gz.sha256sum
gstreamer_ti/opensource_build/patchfiles/: flumpegdemux1_r1483.patch  flumpegdemux2_r1483.patch  glib1_2_18_1.patch  glib1_2_21_1.patch  gstreamer1_0_10_20.patch  gstreamer2_0_10_20.patch  gstreamer2_0_10_21.patch  gstreamer3_0_10_21.patch  plugins_base1_0_10_21.patch  plugins_base1_0_10_25.patch  plugins_good1_0_10_10.patch  plugins_good1_0_10_15.patch  plugins_good2_0_10_10.patch  plugins_good2_0_10_15.patch  plugins_good2_0_10_16.patch  plugins_good3_0_10_10.patch  plugins_good3_0_10_15.patch  plugins_good4_0_10_10.patch  plugins_good4_0_10_15.patch  plugins_ugly1_0_10_11.patch  plugins_ugly1_0_10_13.patch  plugins_ugly1_0_10_9.patch
gstreamer_ti/opensource_build/patchfiles/glib-2.22.2/: 0001-Disable-support-for-atomic-spinlocks.patch  glib1_2_22_2.patch
gstreamer_ti/opensource_build/patchfiles/gst-plugins-bad-0.10.21/: 0001-freeze-Add-timeout-property.patch  0002-fixes-to-mux-h264-stream-utilizing-ctts.patch  0003-ugly-hack-to-avoid-a-memcpy.patch  0004-h264parse-Add-workaround-for-separate-codec_config-a.patch  0005-jpegparse-ignore-unhandled-application-markers.patch  0006-mpegvideoparse-merge-sequence-header.patch  0007-h264parse-fix-boundary-condition.patch
gstreamer_ti/opensource_build/patchfiles/gst-plugins-base-0.10.25/: 0001-Fix-for-playbin2.patch
gstreamer_ti/opensource_build/patchfiles/gst-plugins-base-0.10.32/: 0001-add-rowstride-support-to-video-utility-functions.patch  0002-stridetransform-skeletal-implementation-of-stridetra.patch  0003-stridetransform-implement-caps-negotiation-and-relat.patch  0004-stridetransform-implement-transform-function.patch  0005-add-gst_stride_transform_transform_size.patch  0006-fix-a-small-typo.-need-to-use-the-smaller-of-new_wid.patch  0011-add-some-neon.patch  (+18 more)
gstreamer_ti/ti_build/: Makefile
gstreamer_ti/ti_build/gst-openmax/: Makefile.am  configure.ac
gstreamer_ti/ti_build/gst-openmax/omx/: Makefile.am  gstomx.c  gstomx_base_ctrl.c  gstomx_base_ctrl.h  gstomx_base_filter.c  gstomx_base_filter.h  gstomx_base_sink.c  gstomx_base_sink.h  gstomx_base_vfpc.c  gstomx_base_vfpc.h  gstomx_base_videodec.c  gstomx_base_videodec.h  gstomx_base_videoenc.c  gstomx_buffertransport.c  gstomx_buffertransport.h  gstomx_colorconv.c  gstomx_colorconv.h  gstomx_core.c  gstomx_core.h  gstomx_ctrl.c  gstomx_ctrl.h  gstomx_h264dec.c  gstomx_h264enc.c  gstomx_mpeg2dec.c  gstomx_mpeg4dec.c  gstomx_noisefilter.c  gstomx_port.c  gstomx_port.h  gstomx_scaler.c  gstomx_util.c  gstomx_util.h  gstomx_videomixer.c  gstomx_videosink.c  gstomx_videosink.h  gstperf.c  gstperf.h  swcsc.c
gstreamer_ti/ti_build/ticodecplugin/: AUTHORS  BUILDING_STAND_ALONE.txt  COPYING  ChangeLog  Makefile.am  Makefile.external  NEWS  README  autogen.sh  configure.ac
gstreamer_ti/ti_build/ticodecplugin/src/: Makefile.am  config.bld  gsttiauddec.c  gsttiauddec.h  gsttiauddec1.c  gsttiauddec1.h  gsttiaudenc1.c  gsttiaudenc1.h  gsttic6xcolorspace.c  gsttic6xcolorspace.h  gstticircbuffer.c  gstticircbuffer.h  gstticodecplugin.c  gstticodecplugin_dm355.cfg  gstticodecplugin_dm355_enc.cfg  gstticodecplugin_dm357.cfg  gstticodecplugin_dm365.cfg  gstticodecplugin_dm368.cfg  gstticodecplugin_dm6446.cfg  gstticodecplugin_dm6467.cfg  gstticodecplugin_dm6467t.cfg  gstticodecplugin_omap3530.cfg  gstticodecplugin_omapl138.cfg  gstticodecs.c  gstticodecs.h  gstticodecs_dm355.c  gstticodecs_dm357.c  gstticodecs_dm365.c  gstticodecs_dm368.c  gstticodecs_dm6446.c  gstticodecs_dm6467.c  gstticodecs_dm6467t.c  gstticodecs_omap3530.c  gstticodecs_omapl138.c  gstticommonutils.c  gstticommonutils.h  gsttidisplaysink2.c  gsttidisplaysink2.h  gsttidmaibuffertransport.c  gsttidmaibuffertransport.h  (+35 more)
release_scripts/: release.sh
testing/: gstreamer_release_testing.xls
(+79 files in other folders)
